<resources>
    <string name="app_name">Semana da Computação</string>
    <string name="novo_participante">Novo participante</string>
    <string name="novo_evento">Novo evento</string>
    <string name="lista_de_participantes">Lista de participantes</string>
    <string name="lista_de_eventos">Lista de eventos</string>
    <string name="nome_completo">Nome completo</string>
    <string name="seu_email_com">seu@email.com</string>
    <string name="cpf">CPF</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="titulo">Título</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="facilitador">Facilitador</string>
    <string name="descricao">Descrição</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="hh_mm">hh:mm</string>
    <string name="cadastro_de_novo_evento">Cadastro de novo evento</string>
    <string name="detalhes_do_participante">Detalhes do participante</string>
    <string name="nome">Nome:</string>
    <string name="e_mail">E-mail:</string>
    <string name="editar_dados_do_participante">Editar dados do participante</string>
    <string name="escolha_o_evento">Escolha o evento</string>
</resources>
